--- a/public/home.html
+++ b/public/home.html
@@ -8,7 +8,7 @@
 </head>
 <body>
   <h1>Admin Home Page</h1>
-  <form method="post" action="/add">
+  <form method="post" action="/api/users/add">
     <input placeholder="username" type="text" name="username">
     <input placeholder="password" type="text" name="password">
     <button>Add</button>
