--- a/public/index.html
+++ b/public/index.html
@@ -48,10 +48,10 @@
 								</div>
 
 								<div class="d-flex align-items-center">
-									<div class="form-check">
+									<!-- <div class="form-check">
 										<input type="checkbox" name="remember" id="remember" class="form-check-input">
 										<label for="remember" class="form-check-label">Remember Me</label>
-									</div>
+									</div> -->
 									<button type="submit" class="btn btn-primary ms-auto">
 										Login
 									</button>
