Added Change Password Link

--- a/public/index.html
+++ b/public/index.html
@@ -24,7 +24,7 @@
 					</div>
 					<div class="card shadow-lg">
 						<div class="card-body p-5">
-							<h1 class="fs-4 card-title fw-bold mb-4">Login</h1>
+							<h1 class="fs-4 card-title fw-bold mb-4">Admin Login</h1>
 							<form method="POST" action="/api/login" class="needs-validation" novalidate="" autocomplete="off">
 								<div class="mb-3">
 									<label class="mb-2 text-muted" for="username">Username</label>
@@ -58,11 +58,11 @@
 								</div>
 							</form>
 						</div>
-						<!-- <div class="card-footer py-3 border-0">
+						<div class="card-footer py-3 border-0">
 							<div class="text-center">
-								Don't have an account? <a href="register.html" class="text-dark">Create One</a>
+								Looking to change password? <a href="api/users/changePassword" class="text-dark">Click Here</a>
 							</div>
-						</div> -->
+						</div>
 					</div>
 					<div class="text-center mt-5 text-muted">
 						Copyright &copy; 2022 &mdash; Secure Folder Management
