Fixed logging bug + fixed change password bug

--- a/public/index.html
+++ b/public/index.html
@@ -60,7 +60,7 @@
 						</div>
 						<div class="card-footer py-3 border-0">
 							<div class="text-center">
-								Looking to change password? <a href="api/users/changePassword" class="text-dark">Click Here</a>
+								Looking to change password? <a href="/changePassword" class="text-dark">Click Here</a>
 							</div>
 						</div>
 					</div>
